# zip-old

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  appveyor.yml  cliff.toml  release-plz.toml  shippable.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: do-not-open-new-issues-here.md
.github/workflows/: auto_approve_prs.yml  auto_merge_prs.yml  ci.yaml  dependabot_automation.yml  devskim.yml  release-plz.yml  rust-clippy.yml
.travis/: id_rsa.enc  publish_doc.sh  travis-doc-upload.cfg  travis-doc-upload.sh
benches/: extract.rs  extract_pipelined.rs  merge_archive.rs  read_entry.rs  read_metadata.rs
examples/: append.rs  delete_file_from_archive.rs  extract.rs  extract_file.rs  extract_lorem.rs  extract_to_stdout.rs  extract_to_tempdir.rs  file_info.rs  info.rs  simple_inspection.rs  simple_inspection_sans_std.rs  stdin_info.rs  update_file_in_archive.rs  write-large-file.rs  write_dir.rs  write_sample.rs
file-content/: Cargo.toml
file-content/src/: lib.rs
fuzz/: .gitignore  Cargo.toml  fuzz.dict  fuzz_read.dict
fuzz/fuzz_targets/: fuzz_read.rs  fuzz_write.rs
script/: doc-upload.cfg
spec/: zip.format
src/: aes.rs  aes_ctr.rs  archive.rs  async_util.rs  buf_reader.rs  buffer.rs  build.rs  central_directory.rs  channels.rs  combinators.rs  compression.rs  cp437.rs  crc32.rs  deflate64.rs  error.rs  extraction.rs  file.rs  ioconverter.rs  lib.rs  metadata.rs  persisted.rs  read.rs  reader.rs  reader_spec.rs  result.rs  spec.rs  stream_impls.rs  system.rs  tokio.rs  truncate.rs  types.rs  unstable.rs  util.rs  write.rs  writer.rs  writer_spec.rs  zip_archive.rs  zip_file.rs  zip_file_data.rs  zip_file_reader.rs  (+1 more)
src/extra_fields/: extended_timestamp.rs  mod.rs
src/file/: data.rs  read.rs
src/file/read/: decrypt.rs
src/read/: lzma.rs  stream.rs  tokio.rs
src/spec/: central_directory_header.rs  end_of_central_directory_record.rs  local_file_header.rs  mod.rs  zip64_end_of_central_directory_locator.rs  zip64_end_of_central_directory_record.rs
src/tokio/: buf_reader.rs  buf_writer.rs  channels.rs  combinators.rs  crc32.rs  extraction.rs  mod.rs  os.rs  read.rs  stream_impls.rs  write.rs
src/tokio/os/: copy_file_range.rs  linux.rs  mod.rs  pipe.rs
tests/: aes_encryption.rs  deflate64.rs  end_to_end.rs  extract.rs  invalid_date.rs  issue_234.rs  lzma.rs  zip64_large.rs  zip_comment_garbage.rs  zip_crypto.rs  zip_extended_timestamp.rs
tests/data/: README.md
tests/data/folder/: binary.wmv
tmp/: .gitignore  Cargo.toml
tmp/src/: copy-file-range.rs  main.rs
zip-format/: Cargo.toml  README.md
zip-format/src/: lib.rs
