[package]
name = "zip"
version = "0.6.6"
authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>", "Marli Frost <marli@frost.red>", "Ryan Levick <ryan.levick@gmail.com>"]
license = "MIT"
repository = "https://github.com/zip-rs/zip.git"
keywords = ["zip", "archive"]
description = """
Library to support the reading and writing of zip files.
"""
edition = "2021"
rust-version = "1.59.0"

[dependencies]
aes = { version = "0.8.2", optional = true }
async-stream = { version = "0.3.5", optional = true }
byteorder = "1.4.3"
bzip2 = { version = "0.4.3", optional = true }
cfg-if = "1"
constant_time_eq = { version = "0.1.5", optional = true }
crc32fast = "1.3.2"
displaydoc = "0.2.4"
thiserror = "1.0.48"
flate2 = { version = "1.0.23", default-features = false, optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
hmac = { version = "0.12.1", optional = true, features = ["reset"] }
indexmap = { version =  "2", features = ["rayon"], optional = true }
libc = { version = "0.2.148", optional = true }
num_enum = "0.6.1"
once_cell = { version = "1.18.0", optional = true }
parking_lot = { version = "0.12.1", features = ["arc_lock"], optional = true }
pbkdf2 = {version = "0.11.0", optional = true }
rayon = { version = "1.8.0", optional = true }
sha1 = {version = "0.10.1", optional = true }
static_assertions = { version = "1.1.0", optional = true }
time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
tokio = { version = "1", features = ["rt", "io-util", "sync", "fs", "macros"], optional = true }
tokio-pipe = { git = "https://github.com/cosmicexplorer/tokio-pipe", rev = "c44321ae17b4324a8ccaa4f687a8f68259fdca30", optional = true }
tokio-stream = { version = "0.1.14", optional = true }
zstd = { version = "0.11.2", optional = true }

[dependencies.memchr2]
version = "2.6.4"
optional = true
package = "memchr"

[target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
crossbeam-utils = "0.8.8"

[dev-dependencies]
bencher = "0.1.5"
criterion = { version = "0.5", features = ["async_tokio"] }
getrandom = "0.2.5"
tempfile = "3.8.0"
time = { version = "0.3.7", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tokio-test = "0.4.3"
uuid = { version = "1.4.1", features = ["v4"] }
walkdir = "2.3.2"

[features]
aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha1" ]
deflate = ["flate2/rust_backend"]
deflate-miniz = ["flate2/default"]
deflate-zlib = ["flate2/zlib"]
tokio-async = [
  "dep:tokio", "dep:memchr2", "dep:tokio-stream", "dep:tokio-pipe", "dep:parking_lot", "dep:libc", "dep:futures-core",
  "dep:futures-util", "dep:async-stream", "dep:indexmap", "dep:once_cell", "dep:static_assertions", "dep:rayon",
]
unreserved = []
default = ["aes-crypto", "bzip2", "deflate", "time", "zstd", "tokio-async"]

[[bench]]
name = "read_entry"
harness = false

[[bench]]
name = "read_metadata"
harness = false

[[bench]]
name = "extract"
harness = false

# [[bench]]
# name = "merge_archive"
# harness = false

[profile.release]
strip                   = false
debug                   = true
# lto                     = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
