[package]
name                    = "tmp"
version                 = "0.1.0"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip                     = { path = ".." }
tokio                   = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tempfile                = "3.8.0"
getrandom               = "0.2.5"
once_cell               = "1"

[profile.release]
strip                   = false
debug                   = true
# lto                     = true
